--- a/src/app/app-login/app-login.component.html
+++ b/src/app/app-login/app-login.component.html
@@ -6,7 +6,7 @@
       <mat-card-subtitle>Entre na estante</mat-card-subtitle>
     </mat-card-header>
     <img mat-card-image src="../../assets/imagens/4.png" alt="Banner de Login">
-    <mat-card-content>
+    <mat-card-content *ngIf="tentativa < 3">
       <form [formGroup]="formularioLogin" (ngSubmit)="loginFirebase()">
         <mat-form-field>
           <input matInput placeholder="Email de Login" formControlName="email">
@@ -22,8 +22,13 @@
           <button mat-raised-button mat-dialog-close color="primary">Fechar</button>
         </mat-card-footer>
       </form>
+      <small *ngIf="tentativa > 0">Numero de tentativas de login: {{ tentativa }}</small>
     </mat-card-content>
     <span>Você ainda <strong>não tem cadastro</strong> clique <a routerLink="/app-app-cadastro">aqui</a>
       e venha fazer parte desta comunidade de leitores</span>
   </mat-card>
 </div>
+<div [hidden]="captcha" *ngIf="tentativa >= 3">
+  <re-captcha (resolved)="resolveRecaptcha($event)" siteKey="6Le_6z8eAAAAALh5y8wBZ8W1xjVBGx4fC8DHMX13"></re-captcha>
+</div>
+<div [hidden]="!captcha"></div>
