--- a/src/app/app-login/app-login.component.scss
+++ b/src/app/app-login/app-login.component.scss
@@ -32,6 +32,10 @@
   background-image: url('../../assets/imagens/ShelfBook.png');
   background-size: cover;
 }
+
+mat-form-field{
+  margin: 5%
+}
 mat-card-footer{
   button{
     margin: 0.3rem;
