--- a/src/app/sagas/sagas.component.html
+++ b/src/app/sagas/sagas.component.html
@@ -1,5 +1,5 @@
 <div class="grid-container">
-  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario">Feed de notícias: {{usuario.displayName}}</h1>
+  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario">Sagas: {{usuario.displayName}}</h1>
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile *ngFor="let card of cardsSagas$ | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
@@ -14,7 +14,7 @@
         </mat-card-content>
         <mat-nav-list>
           <mat-list-item *ngFor="let link of card.link">
-            <a matLine [href]="'/saga/'+card.id">{{ link.texto }}</a>
+            <p matLine (click)="irParaDetalhes(card.id, card)" >{{ link.texto }}</p>
             <button mat-raised-button mat-dialog-close color="primary" (click)="irParaDetalhes(card.id, card)">
               Detalhes
             </button>
