--- a/src/app/app-cadastro/app-cadastro.component.scss
+++ b/src/app/app-cadastro/app-cadastro.component.scss
@@ -5,8 +5,11 @@ mat-grid-list{
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 920px;
+  max-width: 1080px;
 }
 mat-form-field{
   margin: 1%;
+}
+.inicio, .cadastrar {
+  size: 2rem;
 }
