Implementação de spinner para carregamento da página

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,5 +1,5 @@
-<div class="grid-container">
-  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario">Seja Bem vindo(a) {{usuario.displayName}}!</h1>
+<div class="grid-container" *ngIf="cards$ | async as Dashboard; else loading">
+  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario;">Seja Bem vindo(a) {{usuario.displayName}}!</h1>
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards$ | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
@@ -24,3 +24,10 @@
     </mat-grid-tile>
   </mat-grid-list>
 </div>
+<mat-card>
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+  </ng-template>
+</mat-card>
