--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -3,6 +3,7 @@
   max-width: 1080px;
   margin-left: auto;
   margin-right: auto;
+  box-sizing: border-box;
 }
 
 .dashboard-card {
@@ -26,4 +27,12 @@
 .mat-h1{
   text-align: center;
   color: #7E56C2
+}
+
+.loading-spinner{
+  background-color: rgb(240, 240, 240);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 6rem;
 }
