--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -12,6 +12,8 @@
   left: 15px;
   right: 15px;
   bottom: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .more-button {
@@ -22,6 +24,13 @@
 
 .dashboard-card-content {
   text-align: center;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100%;
+  justify-content: center;
+  align-items: stretch;
 }
 
 .mat-h1{
@@ -35,4 +44,8 @@
   align-items: center;
   justify-content: center;
   padding: 6rem;
+}
+
+.mat-card-title {
+  font-size: 1.3rem;
 }
