--- a/src/app/criticas/criticas/criticas.component.html
+++ b/src/app/criticas/criticas/criticas.component.html
@@ -11,9 +11,9 @@
           <mat-card-content class="dashboard-card-content">
             <div>{{card.conteudo}}</div>
           </mat-card-content>
-              <a matLine [href]="card.link">Mais informações</a>
-              <button mat-icon-button>
-                <mat-icon>info</mat-icon>
+            <button mat-raised-button color="primary" (click)="abrirDialogoCriticas('Críticas Literárias')">
+              Mais informações
+            <mat-icon>info</mat-icon>
               </button>
         </mat-card>
       </mat-grid-tile>
