Refatoração do dialogo Criticas

--- a/src/app/criticas/criticas/criticas.component.html
+++ b/src/app/criticas/criticas/criticas.component.html
@@ -11,7 +11,7 @@
           <mat-card-content class="dashboard-card-content">
             <div>{{card.conteudo}}</div>
           </mat-card-content>
-            <button mat-raised-button color="primary" (click)="abrirDialogoCriticas('Críticas Literárias')">
+            <button mat-raised-button color="primary" (click)="abrirDialogoCriticas(card.titulo)">
               Mais informações
             <mat-icon>info</mat-icon>
               </button>
