--- a/src/app/criticas/dialogos/criticas-dialogo/criticas-dialogo.component.html
+++ b/src/app/criticas/dialogos/criticas-dialogo/criticas-dialogo.component.html
@@ -1,18 +1,7 @@
-<div mat-dialog-content>
-  <mat-card class="example-card"  *ngIf="cardsCriticas$ | async as Criticas">
-    <mat-grid-list cols="1" rows="1">
-    <mat-card-header>
-      <mat-grid-tile *ngFor="let card of cardsCriticas$ | async">
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{card.titulo}}</mat-card-title>
-    </mat-grid-tile>
-    </mat-card-header>
-    <img mat-card-image src="../../assets/imagens/4.png" alt="Banner de Login">
-    <mat-card-content>
-    </mat-card-content>
-    <span>Você ainda <strong>não tem cadastro</strong> clique <a routerLink="/app-app-cadastro">aqui</a>
-      e venha fazer parte desta comunidade de leitores</span>
-
-    </mat-grid-list>
-  </mat-card>
+<div *ngIf="cardsCriticas$ | async as criticas;">
+  <h1 mat-dialog-title>{{criticas.titulo}}</h1>
+    <mat-card-content>{{criticas.link}}</mat-card-content>
+</div>
+<div mat-dialog-actions>
+    <button mat-raised-button mat-dialog-close color="accent">Fechar</button>
 </div>
