--- a/src/app/cdd/classes/classes.component.html
+++ b/src/app/cdd/classes/classes.component.html
@@ -1,3 +1,34 @@
+<div class="search-area">
+  <p>
+    <mat-form-field class="buscar" appearance="fill">
+      <mat-label>Procurar</mat-label>
+      <input matInput #searchInput/>
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </p>
+  <div *ngIf="resultado$ | async as resultado">
+    <mat-card class="resultado">
+      <mat-card-header>
+        <mat-card-title>Resultado da busca: </mat-card-title>
+      </mat-card-header>
+      <div class="cartaoBusca">
+        <div>
+          <p class="titulo">Ícones CDD</p>
+          <button mat-fab color="accent" aria-label="Example icon button with a bookmark icon">
+            <mat-icon class="mat-18" >{{ resultado._idGenero | pipes }}</mat-icon>
+          </button>
+          </div>
+        <div>
+          <p class="titulo">Nome do Genero</p>
+          <p>{{ resultado.nomeGenero}}</p>
+        </div>
+        <div>
+          <p class="titulo">Fator Decimal</p>
+          <p>{{ resultado.decimalGenero }}</p>
+        </div>
+      </div>
+    </mat-card>
+  </div>
 <mat-card>
   <div *ngIf=" livrosGeneros$ | async as livrosGeneros; else loading;">
     <mat-toolbar color="accent">
