--- a/src/app/cdd/classes/classes.component.scss
+++ b/src/app/cdd/classes/classes.component.scss
@@ -4,13 +4,48 @@ table {
 .example-spacer {
   flex: 1 1 auto;
 }
-.loading-spinner{
+.loading-spinner {
   background-color: rgb(221, 221, 221);
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 5rem;
 }
-.iconeCdd{
+.iconeCdd {
   margin: 0.5rem;
 }
+
+.buscar {
+  display: flex;
+  justify-content: end;
+  margin: 20px 10px 20px 10px;
+}
+
+.resultado {
+  width: 95%;
+  margin: 20px auto;
+
+  .titulo {
+    font-weight: bold;
+  }
+
+  .mat-card-header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .mat-card-title {
+    color: #7e56c2;
+    font-size: 25px;
+    font-weight: bold;
+  }
+
+}
+
+.cartaoBusca{
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
