Aplicar URL de Foto via Cadastro

--- a/src/app/app-cadastro/app-cadastro.component.html
+++ b/src/app/app-cadastro/app-cadastro.component.html
@@ -56,7 +56,7 @@
               </div>
             </form>
           </mat-step>
-          <mat-step [stepControl]="formularioCadastro" errorMessage="Será necessário adicionar a URL da foto.">
+          <mat-step [stepControl]="formularioCadastro" errorMessage="Será necessário adicionar a URL da foto">
             <form [formGroup]="formularioCadastro">
               <ng-template matStepLabel>Url Foto</ng-template>
               <mat-form-field appearance="fill">
