--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -14,7 +14,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="{{toolbarCor}}">
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Menu BookShelf Lateral">menu</mat-icon>
@@ -22,6 +22,12 @@
       <a routerLink="/">
         <img mat-card-sm-image [width]="lIcone" [height]="aIcone" [src]="iconeGeral">
       </a>
+      <button (click)="trocaCor()" class="trocaDeCor">
+
+          <span class="material-icons">cached</span>
+          <span class="texto">Clique para alterar a cor</span>
+
+      </button>
       <ng-container *ngIf="usuario$ | async as usuario; else botaoLogin">
         <button mat-raised-button color="primary" [matMenuTriggerFor]="usuarioMenu">
           <mat-icon class="mat-18">local_library</mat-icon>
