--- a/src/app/navegacao/navegacao.component.scss
+++ b/src/app/navegacao/navegacao.component.scss
@@ -10,7 +10,8 @@
   background: inherit;
 }
 
-.mat-toolbar.mat-primary {
+.mat-toolbar.mat-primary,
+.mat-toolbar.mat-accent {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -21,4 +22,26 @@
   border-radius: 65%;
   width: 55px;
   height: 50px;
+}
+
+.trocaDeCor {
+  margin: 10px 10px;
+  justify-content: center;
+  display: flex;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background-color: transparent;
+  color: white;
+  gap: 5px;
+  border: none;
+
+  .texto {
+    margin: 4px;
+    text-align: center;
+  }
+}
+
+.trocaDeCor:hover {
+  font-weight: bold;
 }
