--- a/src/app/sugestoes/sugestoes.component.scss
+++ b/src/app/sugestoes/sugestoes.component.scss
@@ -1,11 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-.example-card {
-  max-width: 400px;
+h1 {
+  margin: 0 3%;
 }
 
-h1 {
-  margin: 0 5%;
+.example-card {
+  max-width: 400px;
+  margin-bottom: 8px;
+}
+
+.buscar {
+  margin: 15px 5% 0 5%;
+  width: 90%;
 }
