--- a/src/app/sagas/sagas.component.scss
+++ b/src/app/sagas/sagas.component.scss
@@ -21,4 +21,15 @@
 
 .dashboard-card-content {
   text-align: center;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100%;
+  justify-content: center;
+  align-items: stretch;
+}
+.resultado {
+  width: 400px;
+  margin: 20px auto;
 }
