--- a/src/app/navegacao/navegacao.component.html
+++ b/src/app/navegacao/navegacao.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <a routerLink="/">
+    <a  routerLink="/">
       <img mat-card-image [src]="logoMenu" alt="Imagem do logo no menu">
     </a>
     <div >
@@ -20,7 +20,7 @@
         <mat-icon aria-label="Menu BookShelf Lateral">menu</mat-icon>
       </button>
       <a routerLink="/">
-        <img mat-card-sm-image [width]="lIcone" [height]="aIcone" [src]="iconeGeral">
+        <img class="small-icon" mat-card-sm-image [width]="lIcone" [height]="aIcone" [src]="iconeGeral">
       </a>
       <button (click)="trocaCor()" class="trocaDeCor">
         <span class="material-icons">cached</span>
