Rotina de busca pelo titulo do cartão do Feed

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,16 +1,58 @@
+<div class="search-area">
+  <!-- INPUT DE PESQUISA -->
+  <p>
+    <mat-form-field class="buscar" appearance="fill">
+      <mat-label>Procurar</mat-label>
+      <input matInput #searchInput />
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </p>
+
+  <div class="grid-container" *ngIf="resultado$ | async as resultado">
+    <mat-grid-list cols="3" rowHeight="100px">
+      <mat-grid-tile [colspan]="resultado.cols" [rowspan]="resultado.rows">
+        <mat-card class="dashboard-card">
+          <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>{{ resultado.titulo }}</mat-card-title>
+            <mat-card-subtitle>{{ resultado.subtitulo }}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image [src]="resultado.img" [alt]="resultado.titulo" />
+          <mat-card-content class="dashboard-card-content">
+            <div>{{ resultado.conteudo }}</div>
+          </mat-card-content>
+          <mat-nav-list>
+            <mat-list-item *ngFor="let link of resultado.link">
+              <a matLine [href]="link.ref">{{ link.texto }}</a>
+              <button mat-icon-button>
+                <mat-icon>info</mat-icon>
+              </button>
+            </mat-list-item>
+          </mat-nav-list>
+        </mat-card>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+</div>
 <div class="grid-container" *ngIf="cards$ | async as Dashboard; else loading">
-  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario;">Seja Bem vindo(a) {{usuario.displayName}}!</h1>
+  <h1 class="mat-h1" *ngIf="usuario$ | async as usuario">
+    Seja Bem vindo(a) {{ usuario.displayName }}!
+  </h1>
   <mat-grid-list cols="3" rowHeight="100px">
-    <mat-grid-tile *ngFor="let card of cards$ | async" [colspan]="card.cols" [rowspan]="card.rows">
+    <mat-grid-tile
+      *ngFor="let card of cards$ | async"
+      [colspan]="card.cols"
+      [rowspan]="card.rows"
+    >
       <mat-card class="dashboard-card">
         <mat-card-header>
           <div mat-card-avatar class="example-header-image"></div>
-          <mat-card-title>{{card.titulo}}</mat-card-title>
-          <mat-card-subtitle>{{card.subtitulo}}</mat-card-subtitle>
+          <mat-card-title>{{ card.titulo }}</mat-card-title>
+          <mat-card-subtitle>{{ card.subtitulo }}</mat-card-subtitle>
         </mat-card-header>
-        <img mat-card-image [src]="card.img" [alt]="card.titulo">
+        <img mat-card-image [src]="card.img" [alt]="card.titulo" />
         <mat-card-content class="dashboard-card-content">
-          <div>{{card.conteudo}}</div>
+          <div>{{ card.conteudo }}</div>
         </mat-card-content>
         <mat-nav-list>
           <mat-list-item *ngFor="let link of card.link">
