--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -33,12 +33,12 @@
   align-items: stretch;
 }
 
-.mat-h1{
+.mat-h1 {
   text-align: center;
-  color: #7E56C2
+  color: #7e56c2;
 }
 
-.loading-spinner{
+.loading-spinner {
   background-color: rgb(240, 240, 240);
   display: flex;
   align-items: center;
@@ -48,4 +48,9 @@
 
 .mat-card-title {
   font-size: 1.3rem;
+}
+
+.buscar {
+  margin: 15px 5% 0 5%;
+  width: 90%;
 }
