Ajustes Tabela de CDD

--- a/src/app/cdd/classes/classes.component.html
+++ b/src/app/cdd/classes/classes.component.html
@@ -29,7 +29,7 @@
       </div>
     </mat-card>
   </div>
-<mat-card>
+<mat-card class="menu">
   <div *ngIf=" livrosGeneros$ | async as livrosGeneros; else loading;">
     <mat-toolbar color="accent">
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
