--- a/src/app/cdd/classes/classes.component.scss
+++ b/src/app/cdd/classes/classes.component.scss
@@ -1,6 +1,13 @@
 table {
   width: 100%;
 }
+
+.menu {
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
 .example-spacer {
   flex: 1 1 auto;
 }
