Melhoria de divisores Feed

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -60,6 +60,7 @@
             <button mat-icon-button>
               <mat-icon>info</mat-icon>
             </button>
+            <mat-divider></mat-divider>
           </mat-list-item>
         </mat-nav-list>
       </mat-card>
