--- a/src/app/navegacao/navegacao.component.scss
+++ b/src/app/navegacao/navegacao.component.scss
@@ -42,6 +42,22 @@
   }
 }
 
+.btAjuda{
+
+  justify-content: center;
+  display: flex;
+  cursor: pointer;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  border: none;
+
+  .texto {
+    margin: 2px;
+    text-align: center;
+  }
+}
+
 .trocaDeCor:hover {
   font-weight: bold;
 }
