--- a/src/app/detalhe-saga/detalhe-saga.component.html
+++ b/src/app/detalhe-saga/detalhe-saga.component.html
@@ -1,15 +1,23 @@
-
-<mat-card class="example-card">
+<mat-card class="cards">
   <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>{{saga.titulo}}</mat-card-title>
-    <mat-card-subtitle>{{saga.autor}}</mat-card-subtitle>
+    <mat-card-title>Saga: </mat-card-title>
   </mat-card-header>
-  <mat-card-content>
-    <p>Lista  de Livros</p>
-    <ol>
-      <li *ngFor="let item of saga.listaLivros">{{item}}</li>
-    </ol>
-  </mat-card-content>
-  <button mat-raised-button mat-dialog-close color="primary" routerLink="/sagas">Voltar</button>
+  <div class="cartaoBusca">
+    <mat-card-header>
+      <mat-card-title>{{saga.titulo}}</mat-card-title>
+      <mat-card-subtitle>{{saga.autor}}</mat-card-subtitle>
+      <img  [src]="saga.img" [alt]="saga.titulo">
+    </mat-card-header>
+    <mat-card-content>
+      <p>Lista  de Livros</p>
+      <ol>
+        <li *ngFor="let item of saga.listaLivros">{{item}}</li>
+      </ol>
+    </mat-card-content>
+    <button mat-raised-button mat-dialog-close color="primary" routerLink="/sagas">Voltar</button>
+  </div>
 </mat-card>
+
+
+
+
